# motion-capture

./: .gitignore  CLAUDE.md  README.md
MothionCapture/Assets/Prefabs/: PlayerRobot.prefab
MothionCapture/Assets/Scenes/: GetStarted_Scene.unity
MothionCapture/Assets/SourceFiles/Scripts/: PoseAvatarDriver.cs  PoseInputReceiver.cs  ThirdPersonController.cs
MothionCapture/ProjectSettings/: ProjectSettings.asset
doc/: implementation-plan.md  usage-guide.md
pose_estimation/: .gitignore  README.md  gesture_mapper.py  main.py  pose_sender.py  pyproject.toml
