[project]
name = "pose-estimation"
version = "0.1.0"
description = "Real-time pose estimation with YOLO11"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "ultralytics>=8.3.0",
    "opencv-python>=4.10.0",
    "numpy>=1.26.0",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu126" }]
torchvision = [{ index = "pytorch-cu126" }]
